Update from build 869ef7c3-7eff-4ad2-9765-2698303f14d7 (#89)
Merge docs to main

--- a/api-reference/core-apis/matchers.mdx
+++ b/api-reference/core-apis/matchers.mdx
@@ -1,311 +1,359 @@
 ---
-title: "Matchers"
-description: "Provides a reference to built-in matchers, matcher combinations, and custom matcher support for expressive test conditions. Explains usage with assertions and mock expectations, shows examples, and covers advanced features like container, string, and predicate matching."
+title: "Matchers Reference"
+description: "A catalog of matchers provided by GoogleTest and GoogleMock for expressive value checking, including advanced and custom matchers. Covers usage patterns, examples, and extensibility options."
 ---
 
 # Matchers Reference
 
-GoogleTest's **Matchers** enable you to write expressive, readable, and flexible expectations and assertions by defining patterns that arguments or values must satisfy. This page provides a detailed reference to the built-in matchers, combination utilities, and facilities for writing your own custom matchers, essential for crafting precise tests and mocks.
+Matchers in GoogleTest and GoogleMock provide a powerful and expressive way to specify conditions and expectations on values or function arguments in your tests. They enable you to write readable assertions and mock expectations that closely express your intent.
 
 ---
 
-## Overview of Matchers
+## Overview
 
-Matchers are predicates used when verifying values passed to mocked functions or evaluated inside assertions like `EXPECT_THAT`. They encapsulate the logic to check a condition (e.g., equality, comparison, string matching) and also explain why a value matches or fails the condition.
+A **matcher** is an object that determines whether a single argument satisfies a given condition. You use matchers inside `ON_CALL()`, `EXPECT_CALL()`, or for assertions with `EXPECT_THAT()` and `ASSERT_THAT()`.
 
-- You can use matchers anywhere a value is expected in mock expectations and `EXPECT_THAT` assertions.
-- Built-in matchers support numeric comparison, string patterns, container contents, pointer checks, and more.
-- Matchers are polymorphic and type-safe: the compiler ensures matchers are used with compatible argument types.
+Matchers can:
+- Verify that arguments meet certain criteria.
+- Be composed or combined to express complex conditions.
+- Provide informative failure messages explaining why a match failed.
 
-### Using Matchers with Assertions and Mocks
-
-You typically use matchers inside `EXPECT_CALL()` on mocks or googletest's `EXPECT_THAT` macro:
+Example:
 
 ```cpp
-#include <gmock/gmock.h>
-
-EXPECT_THAT(value, StartsWith("Hello"));
-EXPECT_CALL(mock, Method(Ge(5), _));
+EXPECT_CALL(turtle, Forward(Ge(100)));  // Argument must be >= 100
+EXPECT_THAT(value, StartsWith("Hello"));  // Value starts with "Hello"
 ```
-
-Here, `StartsWith` and `Ge` are matchers.
 
 ---
 
-## Basic Built-in Matchers
+## Using Matchers
 
-### Wildcard
+Matchers come in various categories to cover most common testing needs. Here is a detailed catalog of built-in matchers available in the `::testing` namespace.
 
-- `_` / `A<T>()` / `An<T>()`: Matches any value of type `T`.
+### Wildcard Matchers
 
-Example:
+| Matcher             | Description                                           |
+| -------------------- | ----------------------------------------------------- |
+| `_`                  | Matches any value of the appropriate type.            |
+| `A<type>()` or `An<type>()` | Matches any value of the specified type `type`.        |
+
+*Example:* If you don't care about a function argument's value, use `_`.
+
 ```cpp
-EXPECT_CALL(mock, Foo(_));
-EXPECT_THAT(x, A<int>());
+EXPECT_CALL(mock, Process(_));  // Accepts any value.
 ```
 
-### Equality and Inequality
+---
 
-- `Eq(value)`: Matches any value equal to `value` using `operator==`.
-- `Ne(value)`: Matches any value not equal to `value`.
-- `TypedEq<T>(value)`: Matches any value of type `T` equal to `value`.
+### Generic Comparison Matchers
 
-Example:
+These compare values using operators or predicates:
+
+| Matcher         | Description                                   |
+|-----------------|-----------------------------------------------|
+| `Eq(value)` or `value` | Matches if argument equals `value` (`==`).      |
+| `Ne(value)`     | Matches if argument does not equal `value`.    |
+| `Lt(value)`     | Matches if argument < `value`.                  |
+| `Le(value)`     | Matches if argument <= `value`.                 |
+| `Gt(value)`     | Matches if argument > `value`.                  |
+| `Ge(value)`     | Matches if argument >= `value`.                 |
+| `IsTrue()`      | Matches if argument evaluates to `true`.       |
+| `IsFalse()`     | Matches if argument evaluates to `false`.      |
+| `IsNull()`      | Matches null pointers (raw or smart).           |
+| `NotNull()`     | Matches non-null pointers (raw or smart).       |
+| `Optional(m)`   | Matches `std::optional` that contains a value matching `m`.
+| `VariantWith<T>(m)` | Matches `std::variant` holding alternative `T` matching `m`.
+| `Ref(variable)` | Matches arguments that refer to `variable` (by reference). |
+| `TypedEq<type>(value)` | Matches if argument has type exactly `type` and equals `value`.
+
+*Example:* Checking an argument exactly equals 42, or is not null.
+
 ```cpp
-EXPECT_CALL(mock, Bar(Eq(42)));
-EXPECT_THAT(x, Ne("foo"));
+EXPECT_CALL(mock, GetValue(Eq(42)));
+EXPECT_CALL(mock, GetPtr(NotNull()));
 ```
 
-### Relational Operators
+**Tip:** For non-copyable value matchers, use `Eq(std::ref(value))` to avoid copying.
 
-- `Lt(value)`, `Le(value)`, `Gt(value)`, `Ge(value)`: match less-than, less-or-equal, greater-than, greater-or-equal.
+---
 
-Example:
+### Floating-Point Matchers
+
+Floating-point comparisons consider floating precision and special cases like NaNs.
+
+| Matcher                           | Description                                      |
+|---------------------------------|--------------------------------------------------|
+| `FloatEq(value)`                 | Matches `float` value approximately equal to `value` (4 ULPs).          |
+| `DoubleEq(value)`                | Matches `double` value approximately equal to `value` (4 ULPs).         |
+| `NanSensitiveFloatEq(value)`    | Like `FloatEq` but treats NaN == NaN as true.                              |
+| `NanSensitiveDoubleEq(value)`   | Like `DoubleEq` but treats NaN == NaN as true.                             |
+| `FloatNear(value, max_abs_err)` | Matches `float` within `max_abs_err` absolute error.                     |
+| `DoubleNear(value, max_abs_err)`| Matches `double` within `max_abs_err` absolute error.                    |
+| `NanSensitiveFloatNear(value, max_abs_err)` | Like `FloatNear` but treats NaN == NaN as true.                      |
+| `NanSensitiveDoubleNear(value, max_abs_err)` | Like `DoubleNear` but treats NaN == NaN as true.                    |
+| `IsNan()`                       | Matches any floating-point NaN value.                                       |
+
+**Example:**
+
 ```cpp
-EXPECT_CALL(mock, Foo(Gt(10)));
-EXPECT_THAT(val, Le(100));
+EXPECT_THAT(x, DoubleEq(3.1415));
+EXPECT_THAT(y, NanSensitiveFloatEq(std::numeric_limits<float>::quiet_NaN()));
 ```
 
-### Pointer Matchers
-
-- `IsNull()`: Matches any null pointer of any type (raw or smart).
-- `NotNull()`: Matches any non-null pointer.
-- `Ref(variable)`: Matches an argument that is a reference to `variable`.
-- `Pointee(matcher)`: Matches a pointer (raw or smart) whose pointed-to value matches `matcher`.
-
-Example:
-```cpp
-EXPECT_CALL(mock, Foo(IsNull()));
-EXPECT_CALL(mock, Foo(Pointee(Eq(5))));
-```
+---
 
 ### String Matchers
 
-- `StrEq(str)`: Matches strings equal to `str` (case-sensitive, works with C-strings, `std::string`, optionally wide strings).
-- `StrNe(str)`: Matches strings not equal to `str`.
-- `StrCaseEq(str)`, `StrCaseNe(str)`: Like above but case-insensitive.
-- `HasSubstr(substring)`: Matches if the string contains `substring`.
-- `StartsWith(prefix)`: Matches strings starting with `prefix`.
-- `EndsWith(suffix)`: Matches strings ending with `suffix`.
+These allow expressive tests on string values (C char arrays or `std::string`). They also work with wide strings if available.
 
-Example:
+| Matcher                  | Description                               |
+|--------------------------|-------------------------------------------|
+| `StrEq(string)`          | Matches string exactly equal to `string`.
+| `StrNe(string)`          | Matches string not equal to `string`.
+| `StrCaseEq(string)`      | Matches string equal to `string`, ignoring case.
+| `StrCaseNe(string)`      | Matches string not equal to `string`, ignoring case.
+| `HasSubstr(string)`      | Matches strings containing `string` as a substring.
+| `StartsWith(prefix)`     | Matches strings starting with `prefix`.
+| `EndsWith(suffix)`       | Matches strings ending with `suffix`.
+| `WhenBase64Unescaped(m)` | Matches base64 escaped strings whose unescaped value matches `m`.
+| `ContainsRegex(string)`  | Matches strings matching regular expression.
+| `MatchesRegex(string)`   | Matches strings matching regular expression exactly.
+
+**Example:**
+
 ```cpp
-EXPECT_THAT(name, StartsWith("Dr."));
-EXPECT_CALL(mock, Foo(StrCaseEq("hello")));
+EXPECT_THAT(my_str, StartsWith("Hello"));
+EXPECT_THAT(error_message, ContainsRegex("File not found.*critical"));
 ```
 
-### Regex Matchers
+---
 
-- `MatchesRegex(regex)`: Matches if the string fully matches the given regex.
-- `ContainsRegex(regex)`: Matches if the string contains a substring that matches the given regex.
+### Exception Matchers
 
-### Floating Point Matchers
+Matching exceptions thrown by callables.
 
-- `DoubleEq(value)`, `FloatEq(value)`: Approximate equality with sensible defaults on floating-point comparison.
-- `NanSensitiveDoubleEq(value)`, `NanSensitiveFloatEq(value)`: Like above, but consider NaNs equal.
-- `DoubleNear(value, max_abs_error)`, `FloatNear(value, max_abs_error)`: Approximately equal within specified max absolute error.
+| Matcher                     | Description                                                |
+|-----------------------------|------------------------------------------------------------|
+| `Throws<E>()`               | Callable throws an exception of type `E`.                  |
+| `Throws<E>(m)`              | Callable throws exception of type `E` with value matching `m`.
+| `ThrowsMessage<E>(m)`       | Callable throws exception of type `E` with `what()` string matching `m`.
 
-Example:
+**Example:**
+
 ```cpp
-EXPECT_THAT(3.14, DoubleNear(3.1415, 0.001));
+auto lambda = [] { throw std::runtime_error("error msg"); };
+EXPECT_THAT(lambda, Throws<std::runtime_error>());
+EXPECT_THAT(lambda, ThrowsMessage<std::runtime_error>(HasSubstr("error")));
 ```
+
+---
 
 ### Container Matchers
 
-- `IsEmpty()`: Matches empty containers or strings.
-- `SizeIs(matcher)`: Matches containers whose size satisfies the size matcher.
-- `ContainerEq(container)`: Matches any container equal to the given container, with detailed failure reports.
-- `WhenSortedBy(comparator, matcher)`: Matches containers that match `matcher` after sorting with `comparator`.
+Container matchers provide flexible ways to assert properties of STL-like containers.
 
-### Collection Content Matchers
+| Matcher                      | Description                                         |
+|------------------------------|-----------------------------------------------------|
+| `SizeIs(m)`                 | Container size matches matcher `m`.                |
+| `BeginEndDistanceIs(m)`     | Distance between begin/end iterators matches `m`. |
+| `ContainerEq(container)`    | Matches if container equals another in contents.   |
+| `Contains(e)`               | Container contains at least one element matching `e`.
+| `Contains(e).Times(n)`      | Container has exactly `n` elements matching `e`.
+| `Each(e)`                   | Every element in container matches `e`.
+| `ElementsAre(e0, e1, ..., en)` | Container matches specified element matchers in order.
+| `ElementsAreArray(...)`     | Like `ElementsAre()` but from array or container.
+| `UnorderedElementsAre(...)` | Matches elements ignoring order.
+| `UnorderedElementsAreArray(...)` | As above but from array or container.
+| `Pointwise(m, container)`  | Compares two containers element-wise with matcher `m` on element pairs.
+| `UnorderedPointwise(m, container)` | As above but ignoring order.
+| `IsSubsetOf(...)`           | Container is subset of given elements.
+| `IsSupersetOf(...)`         | Container is superset of given elements.
+| `WhenSorted(m)`             | Container sorted by `<` matches matcher `m`.
+| `WhenSortedBy(comparator, m)` | Container sorted by comparator matches `m`.
 
-- `Contains(element_matcher)`: Matches containers with at least one element matching `element_matcher`. Can be modified with `.Times(matcher)` to expect exact or range counts.
-- `Each(element_matcher)`: Matches containers whose every element matches `element_matcher`.
-- `ElementsAre(m_1, ..., m_n)`: Matches containers with exactly n elements matching `m_1` through `m_n` in order.
-- `UnorderedElementsAre(m_1, ..., m_n)`: Matches containers whose elements match the given matchers in any order.
-- `ElementsAreArray()`, `UnorderedElementsAreArray()`: Like above but from arrays, containers, or initializer lists.
-- `IsSupersetOf()`, `IsSubsetOf()`: Verify partial matches for superset or subset.
-- `Pointwise(tuple_matcher, container)`: Matches positionwise elements of two containers.
-- `UnorderedPointwise()` same as above but order doesn't matter.
-
-Example:
-```cpp
-EXPECT_THAT(vec, ElementsAre(1, Gt(0), _));
-EXPECT_THAT(map, Contains(Key(Ge(5))));
-```
-
-### Tuple and Pair Matchers
-
-- `Pair(matcher_first, matcher_second)`: Matches std::pair whose first and second fields match respectively.
-- `Key(matcher)`: Matches any std::pair where first field matches `matcher`.
-- `FieldsAre(m_1, ..., m_n)`: Matches structs, tuples, and aggregates piecewise with given matchers.
-
----
-
-## Matcher Combinators
-
-### Logical Combinators
-
-- `Not(m)`: Matches the negation of matcher `m`.
-- `AllOf(m1, m2, ..., mn)`: Matches if all matchers match.
-- `AnyOf(m1, m2, ..., mn)`: Matches if any matcher matches.
-
-They can be nested to build complex logic:
+**Example:**
 
 ```cpp
-EXPECT_THAT(x, AllOf(Gt(0), Not(Eq(10))));
-```
-
-### Conditional Matcher
-
-- `Conditional(cond, m1, m2)`: Matches `m1` if `cond` is true, else `m2`.
-
----
-
-## Writing Custom Matchers
-
-GoogleTest offers an easy-to-use macro system to create your own matchers quickly, or lets you define matcher classes for advanced needs.
-
-### MATCHER Macro
-
-Define parameterless custom matchers:
-
-```cpp
-MATCHER(IsEven, "") {
-  return (arg % 2) == 0;
-}
-```
-
-Use:
-
-```cpp
-EXPECT_THAT(value, IsEven());
-```
-
-### Parameterized Matchers
-
-Use `MATCHER_P`, `MATCHER_P2`, ..., `MATCHER_P10` macros:
-
-```cpp
-MATCHER_P(IsDivisibleBy, divisor, "") {
-  return (arg % divisor) == 0;
-}
-```
-
-Use:
-
-```cpp
-EXPECT_THAT(value, IsDivisibleBy(7));
-```
-
-Descriptions can be parameterized and may reference `negation` for proper failure messages.
-
-### Custom Matcher Classes
-
-For complex matchers, implement the matcher interface class manually. A matcher class must:
-
-- Define `using is_gtest_matcher = void;`
-- Implement `bool MatchAndExplain(const T& arg, std::ostream* os) const;`
-- Implement `void DescribeTo(std::ostream* os) const;`
-- Optionally implement `DescribeNegationTo(std::ostream* os) const;`
-
-Finally, provide a factory function that returns a `testing::Matcher<T>`.
-
-Example:
-
-```cpp
-class DivisibleBy7Matcher {
- public:
-  using is_gtest_matcher = void;
-
-  explicit DivisibleBy7Matcher(int divisor) : divisor_(divisor) {}
-
-  bool MatchAndExplain(int n, std::ostream* os) const {
-    if (n % divisor_ == 0) return true;
-    if (os) *os << "remainder is " << (n % divisor_);
-    return false;
-  }
-
-  void DescribeTo(std::ostream* os) const {
-    *os << "is divisible by " << divisor_;
-  }
-
-  void DescribeNegationTo(std::ostream* os) const {
-    *os << "is not divisible by " << divisor_;
-  }
-
- private:
-  const int divisor_;
-};
-
-inline testing::Matcher<int> DivisibleBy7(int divisor) {
-  return testing::Matcher<int>(new DivisibleBy7Matcher(divisor));
-}
+EXPECT_THAT(vec, Contains(Gt(10)));
+EXPECT_THAT(set, Each(Le(100)));
+EXPECT_THAT(array, ElementsAre(1, 2, 3));
+EXPECT_THAT(unordered_map, UnorderedElementsAre(Pair("a", 1), Pair("b", 2)));
 ```
 
 ---
 
-## Advanced and Container Matchers
+### Member Matchers
 
-### Matching Container Sizes and Contents
+Matchers that examine members or properties of objects.
 
-Matchers like `SizeIs(matcher)`, `Contains(matcher)`, `Each(matcher)`, `ElementsAre(...)`, and `UnorderedElementsAre(...)` provide nuanced checks for container size and element values, along with detailed failure explanations.
+| Matcher               | Description                                                        |
+|-----------------------|--------------------------------------------------------------------|
+| `Field(&Class::field, m)`              | Matches if `argument.field` (or `argument->field` pointer) matches matcher `m`.
+| `Field(name, &Class::field, m)`       | Like above, but includes field name in error messages.
+| `Property(&Class::getter, m)`          | Matches if `argument.getter()` returns a value matching `m`.
+| `Property(name, &Class::getter, m)`   | Like above, with property name.
+| `Key(e)`                             | Matches an `std::pair` whose `first` (key) matches matcher or value `e`.
+| `Pair(m1, m2)`                       | Matches an `std::pair` with `first` matching `m1` and `second` matching `m2`.
+| `FieldsAre(m...)`                    | Matches aggregates or tuples by piecewise matching fields with provided matchers.
+
+**Example:**
+
+```cpp
+EXPECT_THAT(obj, Field(&MyClass::id, Ge(0)));
+EXPECT_THAT(map, Contains(Key(Eq("foo"))));
+EXPECT_THAT(pair, Pair(Lt(10), HasSubstr("bar")));
+EXPECT_THAT(tuple, FieldsAre(Eq(1), HasSubstr("abc"), _));
+```
+
+---
+
+### Multi-argument Matchers
+
+These handle matching multiple arguments as a tuple, useful in `.With()` clauses.
+
+| Matcher             | Description                                                   |
+|---------------------|---------------------------------------------------------------|
+| `AllArgs(m)`        | Matches all arguments as a tuple against matcher `m`.         |
+| `Args<N1, N2, ...>(m)` | Matches selected subset of arguments (by 0-based indices) with `m`.
+
+Used typically as:
+
+```cpp
+EXPECT_CALL(foo, Func(_, _)).With(AllArgs(Lt()));  // first arg < second arg
+EXPECT_CALL(foo, Bar(_, _, _)).With(Args<0, 2>(Eq()));
+```
+
+---
+
+### Composite Matchers
+
+Build complex matchers by composing others:
+
+| Matcher                 | Description                                   |
+|-------------------------|-----------------------------------------------|
+| `AllOf(m1, m2, ..., mn)` | Matches if all `m1` to `mn` match.
+| `AnyOf(m1, m2, ..., mn)` | Matches if any of `m1` to `mn` match.
+| `Not(m)`                 | Matches if `m` does not match.
+| `Conditional(cond, m1, m2)` | Matches `m1` if `cond` true, else `m2`.
+
+---
+
+### Adapters for Matchers
+
+| Matcher                | Description                                    |
+|------------------------|------------------------------------------------|
+| `MatcherCast<T>(m)`    | Casts matcher `m` to type `Matcher<T>` unsafely.
+| `SafeMatcherCast<T>(m)`| Safely casts matcher `m` to `Matcher<T>`, ensuring compatibility.
+| `Truly(predicate)`     | Converts arbitrary predicate to matcher.
+
+---
+
+### Using Matchers As Predicates
+
+- `Matches(m)(value)` returns true if `value` matches `m`.
+- `ExplainMatchResult(m, value, listener)` returns true if `value` matches `m` and writes explanation.
+
+---
+
+### Defining New Matchers
+
+You can define custom matchers for specific needs using macros or interfaces.
+
+- `MATCHER(name, desc) { ... }` defines a polymorphic matcher without parameters.
+- `MATCHER_P(name, param, desc) { ... }` defines a parameterized matcher.
+- Use `ExplainMatchResult()` inside to wrap other matchers.
 
 Example:
 
 ```cpp
-EXPECT_THAT(vec, SizeIs(Ge(3)));
-EXPECT_THAT(vec, Contains(42).Times(2));
-EXPECT_THAT(map, UnorderedElementsAre(Pair("key1", 1), Pair(_, 2)));
+MATCHER(IsEven, "") { return arg % 2 == 0; }
+EXPECT_THAT(x, IsEven());
 ```
 
-### Field and Property Matchers
+For advanced control, you can implement the matcher interface classes directly.
 
-- `Field(&Class::member, matcher)` verifies a member variable matches.
-- `Property(&Class::getter, matcher)` verifies the result of a const getter method matches.
+---
+
+### Defining New Actions
+
+If built-in actions don't suffice, define your own actions:
+
+- Use lambdas, functors, or action templates with appropriate operator signatures.
+- Use `Invoke()`, `InvokeWithoutArgs()` to call functions or methods.
+- Combine multiple actions with `DoAll()`.
+- Actions can produce side effects or return values as expected.
 
 Example:
 
 ```cpp
-EXPECT_THAT(foo, Field(&Foo::value, Ge(10)));
-EXPECT_THAT(bar, Property(&Bar::Name, StartsWith("John")));
+EXPECT_CALL(mock, Foo()).WillOnce([]() { return 42; });
 ```
 
-### Tuple and Pair Matchers
+---
 
-- `FieldsAre(m1, m2, ..., mn)` matches aggregates or tuples piecewise.
-- `Pair(m1, m2)` matches a `std::pair` with respective field matchers.
+### Special Matchers and Utilities
+
+- `Ref(variable)` matches arguments that refer to the same variable.
+- `Pointee(m)` matches pointers pointing to values matching matcher `m`.
+- `WhenDynamicCastTo<T>(m)` matches objects that can be `dynamic_cast` to `T` and satisfy `m`.
 
 ---
 
-## Tips and Best Practices
+### Tips & Best Practices
 
-- Use matchers sparingly, expressing only what's required to avoid brittle tests.
-- Combine matchers with `AllOf` and `AnyOf` to construct complex conditions cleanly.
-- Use `SafeMatcherCast<T>()` to safely cast matchers between types when appropriate.
-- For string matching, choose the most specific string matcher (e.g., `StrEq` vs `HasSubstr`) to improve clarity.
-- Use nested containers and `ElementsAre` for structured container validations.
-- Write custom matchers for domain-specific checks to keep tests readable and expressive.
-
----
-
-## Troubleshooting
-
-- If your matcher fails unexpectedly, enable verbose output with `--gmock_verbose=info` for detailed diagnostics.
-- For complex container matchers, check failure messages for element index and value mismatches.
-- Ensure your custom matcher is functionally pure: no side effects or state changes.
+- Use `ON_CALL` to set default behaviors without creating expectations.
+- Use `EXPECT_CALL` to set expectations on call count and argument values.
+- Omit argument matchers or use `_` to avoid over-specification.
+- Combine matchers to build expressive conditions.
+- Use `NiceMock` and `StrictMock` wrappers to control warnings and failures on uninteresting calls.
+- When testing containers, pick between ordered `ElementsAre` and unordered `UnorderedElementsAre` appropriately.
+- Use `With(...)` to match multiple arguments as a tuple.
 
 ---
 
-## Related Documentation
+### Example: Using Various Matchers
 
-- [Assertions Reference](../core-apis/assertions.md) — Using `EXPECT_THAT` with matchers
-- [Mocking API Reference](../core-apis/mocking.md) — Using matchers in mock expectations
-- [gMock Cookbook](../gmock_cook_book.md) — Recipes for custom matchers and interactions
-- [Matchers Overview and Guide](concepts/architecture-core-abstractions/matchers-actions-cardinalities.md) — Concepts and patterns
+```cpp
+using ::testing::_;
+using ::testing::Eq;
+using ::testing::Gt;
+using ::testing::StartsWith;
+using ::testing::Pair;
+using ::testing::ElementsAre;
+
+// Expect 'DoSomething' called with first arg >= 10 and any second arg
+EXPECT_CALL(mock, DoSomething(Gt(9), _));
+
+// Assert that 'name' string starts with "My"
+EXPECT_THAT(name, StartsWith("My"));
+
+// Check a vector contains exactly three elements, matching conditions:
+EXPECT_THAT(vec, ElementsAre(1, Gt(0), Eq(3)));
+
+// Check a map contains a key-value pair with key "foo" and numeric value > 10
+EXPECT_THAT(my_map, Pair(Eq("foo"), Gt(10)));
+```
+
+This expressive syntax improves readability and test clarity.
 
 ---
 
-For detailed examples and explanations, see [gMock Cheat Sheet](../gmock_cheat_sheet.md) and [gMock for Dummies](../gmock_for_dummies.md).
+### Troubleshooting
+
+- If a matcher does not compile, ensure types match or use `SafeMatcherCast`.
+- Beware of using implicit conversions that can cause unexpected match results.
+- For pointers, use `IsNull()` or `NotNull()` rather than raw `nullptr` comparisons.
+- Use `ExplainMatchResult()` or run tests with verbose output (`--gmock_verbose=info`) to diagnose matcher failures.
+
+---
+
+For a practical introduction and workflows using matchers, consider reading the [gMock for Dummies](../gmock_for_dummies.md) and [Using Assertions Effectively](../guides/getting-started/using-assertions.mdx) guides.
+
+For full API details, consult [Mocking Reference](../docs/reference/mocking.md) and [Actions Reference](../docs/reference/actions.md).
+
+---
+
+**Note:** This catalog covers matchers; they play a vital role when combined with mocks and actions to build robust tests.
 
 ---
