--- a/concepts/core-architecture/assertions-matchers.mdx
+++ b/concepts/core-architecture/assertions-matchers.mdx
@@ -1,182 +1,225 @@
 ---
-title: "Assertions, Matchers, and Verification Mechanisms"
-description: "Delve into how GoogleTest structures its assertion system, including the matcher infrastructure, custom expectations, and result reporting. Learn the underpinning concepts that allow complex, expressive, and readable test assertions."
+title: "Assertions & Matchers"
+description: "Dive into the rich assertion and matcher system at the heart of GoogleTest. Learn how built-in and custom assertions work, how matchers enhance expressiveness, and how results are handled as fatal or non-fatal failures."
 ---
 
-# Assertions, Matchers, and Verification Mechanisms
+# Assertions & Matchers in GoogleTest
 
-Delve into how GoogleTest structures its assertion system, including the matcher infrastructure, custom expectations, and result reporting. Learn the underpinning concepts that allow complex, expressive, and readable test assertions.
-
----
-
-## Introduction
-
-GoogleTest enables expressive and precise assertions through a rich assertion system built on matchers, expectations, and verification mechanisms. This system empowers developers to specify exactly what they expect from their tests, whether through simple equality checks or complex conditions involving sequences, containers, and custom logic.
-
-This page focuses specifically on the core concepts behind assertions and matchers as they relate to verification of mock interactions and value checks within GoogleTest, explaining how they integrate to provide clear, actionable feedback during test runs.
+GoogleTest offers a powerful and expressive system of assertions and matchers that serve as the backbone for verifying expected behaviors in your tests. Understanding how built-in and custom assertions operate, how matchers enhance expressiveness, and how results are classified into fatal and non-fatal failures will empower you to write more robust and clear test code.
 
 ---
 
-## Core Concepts of Assertions and Matchers
+## Understanding Assertions
 
-### Assertions
+Assertions are the fundamental way to verify conditions in your test cases. They evaluate boolean expressions and report outcomes as either passing or failing test results.
 
-Assertions in GoogleTest allow you to verify that program behavior matches your expectations. They come in two main forms:
+### Types of Assertions
 
-- **Boolean Assertions:** Check simple true/false conditions (e.g., `EXPECT_TRUE()`, `ASSERT_FALSE()`).
-- **Predicate and Matcher Assertions:** Use matchers to describe complex expectations in a human-readable form, such as `EXPECT_THAT(value, matcher)`.
+GoogleTest distinguishes two main categories:
 
-Matchers provide the capability to specify assertions with rich expressive power — from exact equality to complex container contents or floating-point proximity.
+- **Fatal Assertions (`ASSERT_*`)**: If a fatal assertion fails, the current test function halts immediately. This is useful when continuing the test would cause misleading results or crash.
 
-### Matchers
+- **Non-fatal Assertions (`EXPECT_*`)**: Upon failure, non-fatal assertions record the failure but continue running the test. Use them when you want to see multiple failures in a single test run.
 
-Matchers are function objects or constructs that evaluate whether a given argument satisfies a condition. GoogleTest offers a comprehensive set of built-in matchers along with mechanisms for creating custom matchers.
+### Common Assertion Macros
 
-Matchers are classified as:
+Some frequently used assertions include:
 
-- **Polymorphic Matchers:** Factories that adapt to the type they are used with, e.g., `Eq(value)`, `IsNull()`, `StartsWith(prefix)`.
-- **Monomorphic Matchers:** Specific to a particular type.
+- `ASSERT_TRUE(condition)` / `EXPECT_TRUE(condition)`: Verifies the condition is true.
+- `ASSERT_FALSE(condition)` / `EXPECT_FALSE(condition)`: Verifies the condition is false.
+- `ASSERT_EQ(val1, val2)` / `EXPECT_EQ(val1, val2)`: Checks that two values are equal.
+- `ASSERT_NE(val1, val2)` / `EXPECT_NE(val1, val2)`: Checks that two values are not equal.
+- Floating point assertions like `ASSERT_FLOAT_EQ` and `EXPECT_NEAR` for approximate comparisons.
 
-Matchers can be composed, combined, and parameterized to build complex expectations. They are used both in pure assertions and in mocking contexts for argument validation.
+### Crafting Custom Assertions
+
+You can define your own assertion macros or functions to validate domain-specific conditions, offering tailored diagnostics and improving readability.
+
+> **Tip:** Prefer non-fatal assertions for conditions where continuing is safe, and fatal assertions when a failure invalidates subsequent test logic.
 
 ---
 
-## Matcher Infrastructure
+## The Role of Matchers
 
-### Using Built-in Matchers
+Matchers complement assertions by providing a rich language to express expectations on values and function arguments, especially in `EXPECT_THAT()` and mocking contexts.
 
-GoogleTest provides matchers for primitive comparisons, string operations, container contents, floating-point comparisons, pointer checks, member and property validations, and more.
+### What Are Matchers?
 
-Some common categories:
+A matcher is essentially a predicate that can evaluate whether a given value meets certain criteria. They provide detailed failure messages describing not only that a value failed but why.
 
-- **Generic Comparisons:** `Eq()`, `Ne()`, `Lt()`, `Gt()`, `Le()`, `Ge()`
-- **Boolean and Pointer Checks:** `IsTrue()`, `IsFalse()`, `IsNull()`, `NotNull()`, `Ref()`
-- **String Matchers:** `StartsWith()`, `EndsWith()`, `HasSubstr()`, `StrCaseEq()`, `StrEq()`
-- **Container Matchers:** `Contains()`, `ElementsAre()`, `UnorderedElementsAre()`, `Each()`, `SizeIs()`
-- **Composite Matchers:** Combining matchers using `AllOf()`, `AnyOf()`, `Not()`
-- **Member and Property Matchers:** `Field()`, `Property()` to test object members or getter results
+> **Real-world analogy:** Consider a matcher as an artistic filter on a photo — it not only accepts or rejects the photo but also explains the characteristics that don’t fit.
+
+### Built-in Matchers Overview
+
+GoogleTest ships with an extensive collection:
+
+- **Wildcard:** `_` matches any value
+- **Comparison Matchers:** `Eq()`, `Ne()`, `Lt()`, `Le()`, `Gt()`, `Ge()`
+- **Floating-point:** `FloatEq()`, `DoubleEq()`, `Nan()`
+- **String:** `StartsWith()`, `EndsWith()`, `Contains()`, `MatchesRegex()`
+- **Exception:** `Throws()`, `ThrowsMessage()`
+- **Container:** `ElementsAre()`, `Contains()`, `UnorderedElementsAre()`
+- **Member:** `Field()`, `Property()`
+- **Composite:** `AllOf()`, `AnyOf()`, `Not()`, `WhenSorted()`
+
+### Using Matchers in Expectations
+
+Matchers are primarily used in the following ways:
+
+- To specify expectations on function arguments in mocks: 
+  ```cpp
+  EXPECT_CALL(mock_obj, Func(Eq(5), Ge(10))); 
+  ```
+
+- To assert conditions in tests with `EXPECT_THAT`: 
+  ```cpp
+  EXPECT_THAT(container, ElementsAre(1, 2, 3));
+  ```
+
+- Matching multiple arguments as a grouped tuple with `.With()` in mocks:
+  ```cpp
+  EXPECT_CALL(mock_obj, Func(_, _)).With(Lt());  // first < second
+  ```
 
 ### Custom Matchers
 
-You can easily write your own matchers using macros:
+When built-in matchers are insufficient, define your own using:
 
-- `MATCHER(name, desc) { ... }` to define a matcher without parameters.
-- `MATCHER_P(name, param, desc) { ... }` to define parameterized matchers.
+- `MATCHER` macros for simple matchers
+- Implementing matcher interfaces for complex polymorphic matchers
 
-For example:
+Custom matchers provide descriptive failure messages and support negation.
+
+> **Best practice:** Keep matchers pure and free of side effects to ensure deterministic test behavior.
+
+---
+
+## Assertions & Matchers in Mocking
+
+GoogleMock builds extensively on matchers and assertions to set fine-grained expectations on mock method calls.
+
+### Setting Expectations with `EXPECT_CALL`
+
+`EXPECT_CALL(mock_object, method(matchers...))` sets up expectations on when and how the mocked method should be called. The framework uses matchers to verify argument values and provides clauses to control call counts, ordering, actions, and retirement of expectations.
+
+### Expectation Clauses and Their Meaning
+
+- `.Times(cardinality)`: Specifies how many times the call is expected; supports precise and fuzzy cardinalities like `Exactly(n)` or `AtLeast(n)`.
+- `.WillOnce(action)`, `.WillRepeatedly(action)`: Define behavior of the mock method when called.
+- `.InSequence(sequences...)`: Enforces call order according to sequences.
+- `.After(expectations...)`: Specifies that this call must occur after given expectations.
+- `.RetiresOnSaturation()`: Retires an expectation once its expected number of calls happen.
+
+### Default Behavior with `ON_CALL`
+
+`ON_CALL(mock_object, method(matchers...))` defines default behaviors for mock methods without imposing requirements on calls.
+
+> **Tip:** Use `ON_CALL` liberally to set default safe behaviors and reserve `EXPECT_CALL` for actually verifying interactions.
+
+### Managing Uninteresting vs Unexpected Calls
+
+- **Uninteresting calls:** Calls to mock methods with no expectations set. By default, these trigger warnings.
+- **Unexpected calls:** Calls that do not match any active expectation; these always produce test failures.
+
+Use `NiceMock`, `NaggyMock`, and `StrictMock` wrappers to control treatment of uninteresting calls.
+
+---
+
+## Result Handling: Fatal vs Non-Fatal Failures
+
+GoogleTest classifies assertion failures as:
+
+- **Fatal failures:** Immediately stop the current test, preventing subsequent code that might rely on the expected state from running.
+- **Non-fatal failures:** Issue warnings but continue test execution to detect multiple failures.
+
+Match your assertion choice (`ASSERT_` vs `EXPECT_`) to test criticality.
+
+---
+
+## Practical Examples
+
 ```cpp
-MATCHER(IsEven, "") {
-  return (arg % 2) == 0;
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+
+using ::testing::Test;
+using ::testing::Return;
+using ::testing::_;
+
+class MockCalculator {
+ public:
+  MOCK_METHOD(int, Add, (int a, int b), ());
+};
+
+TEST(CalculatorTest, AddsNumbers) {
+  MockCalculator mock_calc;
+
+  // Expect Add will be called exactly once with any arguments
+  EXPECT_CALL(mock_calc, Add(_, _))
+      .Times(1)
+      .WillOnce(Return(5));
+
+  int result = mock_calc.Add(2, 3);
+  EXPECT_EQ(result, 5);
+}
+
+TEST(CalculatorTest, AddReturnsDifferentValues) {
+  MockCalculator mock_calc;
+
+  EXPECT_CALL(mock_calc, Add(1, 2))
+      .WillOnce(Return(3));
+  EXPECT_CALL(mock_calc, Add(3, 4))
+      .WillOnce(Return(7));
+
+  EXPECT_EQ(mock_calc.Add(1, 2), 3);
+  EXPECT_EQ(mock_calc.Add(3, 4), 7);
 }
 ```
 
-Usage:
 ```cpp
-EXPECT_CALL(mock_obj, Func(IsEven()));
-EXPECT_THAT(value, IsEven());
-```
+// Using matchers in assertions
+using ::testing::Each;
+using ::testing::Gt;
 
-Custom matchers benefit from clearly defined descriptions and optional explanations of match failures to improve test diagnostics.
-
----
-
-## Verifying Calls with Expectations
-
-### Mocking and Expectations
-
-When using mocks, expectations specify how many times and in what order certain method calls should be made with specified arguments.
-
-Key macros:
-
-- `ON_CALL(mock, Method(matchers)).WillByDefault(action);` for specifying default call behavior without expectations.
-- `EXPECT_CALL(mock, Method(matchers)).Times(n).WillOnce(action).WillRepeatedly(action);` for setting explicit call expectations.
-
-### Cardinalities and Call Counts
-
-Cardinalities specify how many times the call is expected. Examples:
-
-- `Exactly(n)` – call exactly n times.
-- `AtLeast(n)`, `AtMost(n)` – call at least or at most n times.
-- `AnyNumber()` – call any number of times.
-
-GoogleTest verifies expectations during mock object destruction or via explicit calls to `Mock::VerifyAndClearExpectations(mock_obj)`.
-
-### Call Ordering and Sequences
-
-You can impose order on expectations using:
-
-- `InSequence` block: expectations inside follow a strict order.
-- `Expectation` objects and `After()` clauses: specify partial order dependencies between expectations.
-
-Example:
-```cpp
-{
-  InSequence seq;
-  EXPECT_CALL(mock, Foo(1));
-  EXPECT_CALL(mock, Bar(2));
+TEST(VectorTest, ContainsPositiveNumbers) {
+  std::vector<int> numbers = {1, 2, 3, 4, 5};
+  EXPECT_THAT(numbers, Each(Gt(0)));
 }
 ```
 
-This requires `Foo(1)` to be called before `Bar(2)`.
+---
 
-### Handling Uninteresting and Unexpected Calls
+## Troubleshooting Tips
 
-- *Uninteresting calls* are calls with no matching `EXPECT_CALL`. These default to returning default values or default actions but generate warnings by default.
-- *Unexpected calls* occur when calls don't match any expectation but an expectation exists on that method, causing test failures.
-
-Wrapper classes manage uninteresting call behavior:
-
-- `NiceMock<T>` suppresses warnings for uninteresting calls.
-- `NaggyMock<T>` (default) warns.
-- `StrictMock<T>` treats uninteresting calls as errors.
-
-### Retiring Expectations
-
-Expectations can retire (become inactive) once saturated (expected calls fulfilled) or explicitly via `.RetiresOnSaturation()`. This feature controls whether surplus calls should produce errors or match alternate expectations.
+- Ensure you set `EXPECT_CALL` expectations *before* exercising mocks.
+- Use `--gmock_verbose=info` to get detailed tracing of mock calls and expectations.
+- Beware of sticky expectations — use `.RetiresOnSaturation()` or sequences to manage lifetime.
+- If you encounter warnings about uninteresting calls, consider using `NiceMock` or explicitly setting catch-all expectations with `Times(AnyNumber())`.
+- Verify that your mocks have virtual destructors to avoid leaks or undefined behavior.
 
 ---
 
-## Result Reporting and Diagnostic Outputs
+## Best Practices
 
-GoogleTest provides detailed output to aid debugging:
-
-- **Call counts and expected vs actual:** Clear messages indicating how many times calls were expected and how many occurred.
-- **Match failure explanations:** Matchers can provide detailed reasons why an argument did or did not match.
-- **Stack traces and invocation locations:** With verbosity enabled, the call origin is shown to ease navigation.
-
-Verbose modes can be adjusted with the `--gmock_verbose` flag (`info`, `warning`, `error`) in order to see more or less detailed mock call activity.
-
-Errors on unsatisfied expectations or unexpected calls are reported as GoogleTest failures, including exact argument mismatch information.
+- Balance assertion use between fatal and non-fatal based on how critical the check is.
+- Use matchers to avoid brittle equality checks — be as general as your test needs.
+- Leverage `ON_CALL` for setting default mock behaviors and reserve `EXPECT_CALL` for interaction verification.
+- Organize expectations with sequences and `.After()` clauses to clearly express call order.
+- Use custom matchers for reusable and descriptive argument validations.
 
 ---
 
-## Practical Tips and Best Practices
+## Further Reading and Links
 
-- Use `ON_CALL` to specify default mock behaviors without constraining calls.
-- Use `EXPECT_CALL` sparingly, only when verifying interactions is critical.
-- Combine expectations using sequences or `After()` for ordering scenarios, avoid fragile tests that over-constrain order.
-- Prefer built-in matchers for clarity; create custom matchers only when necessary.
-- When matching containers, use `ElementsAre` or `UnorderedElementsAre` appropriately to respect element order requirements.
-- Use `RetiresOnSaturation()` when a limited number of calls to a particular expectation is desired.
-- Use verbosity controls to help debug uninteresting or unexpected calls.
+- [Using Assertions Effectively Guide](../guides/getting-started/using-assertions.md)
+- [Matchers Reference](../api-reference/core-apis/matchers.md)
+- [Mocking Reference](../docs/reference/mocking.md)
+- [gMock for Dummies](../docs/gmock_for_dummies.md)
+
+Explore the **Core Features and Value** page for a broad overview of the assertion system within GoogleTest and the **Writing Your First Test** guide for practical application of assertions and matchers.
 
 ---
 
 ## Summary
 
-GoogleTest’s assertion and matcher infrastructure provides a powerful framework to define clear, precise test expectations, validate arguments of function calls, and verify mock object interactions with robust reporting. By understanding cardinalities, matchers, sequences, and the handling of default and unexpected behaviors, users gain mastery to write both simple and sophisticated tests with confidence.
-
-For users aiming to deepen their test writing and mocking skills, this page provides the conceptual foundation for the assertion and verification mechanisms of GoogleTest.
-
----
-
-## References and Further Reading
-
-- [Matchers Reference](https://github.com/google/googletest/blob/main/docs/reference/matchers.md): Detailed descriptions of available matchers.
-- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md): Covers macros, expectations, default actions, and sequencing.
-- [Assertions Reference](https://github.com/google/googletest/blob/main/docs/reference/assertions.md): Overview of GoogleTest assertions.
-- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md): Practical recipes for writing mock-based tests.
-- [Guides on Using Matchers](../guides/core-workflows/using-matchers.mdx): Help mastering built-in and custom matchers.
-- [Mocking with GoogleMock Guide](../guides/core-workflows/mocking-with-gmock.mdx): Comprehensive mocking workflow.
-
----
+Assertions and matchers form the expressive foundation of GoogleTest’s verification system. They allow you to write clear, powerful tests by verifying precise conditions or flexible patterns, supporting both immediate fatal failures and continued checking with non-fatal failures. With rich built-in matchers, support for custom predicates, and advanced interaction verification in mock objects, GoogleTest provides the comprehensive tooling needed for robust and maintainable tests.
