--- a/concepts/core-architecture/test-discovery-lifecycle.mdx
+++ b/concepts/core-architecture/test-discovery-lifecycle.mdx
@@ -1,234 +1,271 @@
 ---
-title: "Test Discovery & Lifecycle"
-description: "Delve into how GoogleTest discovers, registers, and runs tests automatically. Understand the phases of test execution—setup, execution, teardown—and how GoogleTest ensures reliable and repeatable unit testing, minimizing manual registration and maximizing automation."
+title: "Test Discovery & Execution Lifecycle"
+description: "Understand how GoogleTest automatically discovers, initializes, and executes tests, including setup, teardown, and reporting mechanics. Learn how test suites and test cases are registered and run, and the flow from test entry point to result output."
 ---
 
-# Test Discovery & Lifecycle
+# Test Discovery & Execution Lifecycle
 
-GoogleTest revolutionizes automated testing by eliminating the need for manual test registration. It seamlessly discovers, registers, and executes tests automatically, enabling you to concentrate on crafting high-quality tests rather than managing test execution details.
+Understand how GoogleTest automatically discovers, initializes, and executes tests, including setup, teardown, and reporting mechanics. Learn how test suites and test cases are registered and run, and the flow from test entry point to result output.
 
 ---
 
-## Automatic Test Discovery and Registration
+## Introduction
 
-### How GoogleTest Finds Your Tests
+When you run your GoogleTest-based test program, the framework handles the entire lifecycle of test discovery, initialization, execution, and report generation without requiring any manual enumeration of tests. This seamless orchestration ensures that all your defined tests run in a controlled, predictable manner, providing immediate feedback and detailed results.
 
-GoogleTest uses its powerful macros such as `TEST()`, `TEST_F()`, and `TEST_P()` to mark tests. When your test binary is built, these macros register each test with the framework automatically before your `main()` function is executed. This registration includes test suite names, test names, source file locations, and an object factory to create the test fixture or test object.
+This page explains the key concepts involved in the test discovery and execution process, explaining how test suites and test cases are registered, how setup and teardown happen, and how the execution flows from the `main()` entry point to the final test output.
 
-This dynamic registration means you never have to enumerate your tests explicitly. The framework keeps track of all test suites and tests, including typed and parameterized tests.
+## How GoogleTest Discovers Tests Automatically
 
-### Dynamic Registration Example
+GoogleTest uses powerful **automatic test registration** to keep track of all your defined tests and test suites.
+
+### Defining Tests
+
+- You define individual tests using the `TEST()` macro (or `TEST_F()` for fixtures).
+- Each test defines a test suite name and test name.
+- When these macros are compiled, they register the test metadata behind the scenes.
+
+### Test Registration
+
+- At program initialization, all registered tests are collected into a global registry.
+- This registry maintains the list of test suites and their associated test cases.
+
+This automatic registration means you never need to manually list or invoke your tests — simply linking your test files into a binary is sufficient.
+
+<Info>
+This automatic discovery is one of GoogleTest's core conveniences, ensuring seamless scalability as your project grows.
+</Info>
+
+## Test Program Entry and Initialization
+
+The typical test program starts execution at `main()`, which can be provided by you or automatically supplied through GoogleTest libraries like `gtest_main` or `gmock_main`.
+
+### Initialization Sequence
+
+1. **Initialize the Testing Framework**
+   - Call `testing::InitGoogleTest(&argc, argv)` to parse command-line flags relevant to GoogleTest.
+   - This handles test filtering, output format selection, catch-exit behavior, and other configuration.
+
+2. **Run Tests**
+   - Call `RUN_ALL_TESTS()` to execute all discovered tests.
+   - GoogleTest returns `0` if all tests pass, or `1` if any fail.
+
+### Example main() Boilerplate
 
 ```cpp
-TEST(MathTest, Addition) {
-  EXPECT_EQ(2 + 2, 4);
-}
-
-TEST_F(MyFixture, DoesSomething) {
-  EXPECT_TRUE(SomeFunction());
-}
-
-void RegisterCustomTests() {
-  ::testing::RegisterTest(
-      "DynamicSuite", "CustomTest",
-      nullptr, nullptr,
-      __FILE__, __LINE__,
-      []() -> MyFixture* { return new MyFixture(); });
-}
-```
-
-Here, `RegisterTest` dynamically adds a test called `CustomTest` under the suite `DynamicSuite`. This flexibility supports use cases where tests depend on runtime data.
-
----
-
-## Test Execution Lifecycle
-
-GoogleTest orchestrates the lifecycle of every test to maintain isolation, reliability, and repeatability. Each test progresses through three essential phases:
-
-### 1. Setup Phase
-
-- For simple tests (`TEST()`), GoogleTest creates a new instance of the default `Test` fixture.
-- For fixture-based tests (`TEST_F()`), it creates an instance of your test fixture class.
-- Calls `SetUpTestSuite()` once before the first test in each test suite to prepare shared resources.
-- Before each individual test:
-  - The fixture's constructor runs.
-  - The `SetUp()` method is called to prepare test-specific setup.
-
-### 2. Execution Phase
-
-- GoogleTest calls your test function (via `TestBody()`) that contains assertions verifying behavior.
-- Assertions report success, non-fatal, or fatal failures, controlling test result.
-- If a fatal failure occurs, GoogleTest aborts the current test but continues the test suite.
-
-### 3. Teardown Phase
-
-- After execution, GoogleTest calls the `TearDown()` method to release test-specific resources.
-- The fixture object is destroyed (destructor called).
-- After the last test in the suite finishes, `TearDownTestSuite()` is called to clean up shared resources.
-
-Each test runs on a fresh fixture object to ensure independence and to avoid side effects affecting other tests.
-
----
-
-## Iterating Over Tests
-
-When you call `RUN_ALL_TESTS()`, GoogleTest executes every registered test in order:
-
-- Saves GoogleTest flag states to isolate test environments.
-- Runs global environments' `SetUp()` methods.
-- For each registered test suite and each test within:
-  - Runs `SetUpTestSuite()` once at the start.
-  - Runs the individual test following the lifecycle above.
-  - Runs `TearDownTestSuite()` after all tests in the suite have completed.
-- Runs global environments' `TearDown()` methods.
-- Collects, reports, and returns the overall success or failure.
-
-You can control the set of tests executed using filters (`--gtest_filter`), enable repeated runs (`--gtest_repeat`), or randomize test order (`--gtest_shuffle`).
-
----
-
-## Managing Test Suites and Tests
-
-### Grouping Tests into Suites
-
-Tests with common functionality or configuration are grouped into test suites. Suites may share costly resources by using static members and `SetUpTestSuite()` / `TearDownTestSuite()`.
-
-### Naming Conventions
-
-- Test suite and test names must be valid C++ identifiers without underscores to avoid collisions.
-- Suites typically describe the module/class under test.
-- Tests describe expected behavior or scenarios.
-
-### Parameterized and Typed Tests
-
-GoogleTest handles registration and execution of parameterized (`TEST_P`) and typed tests automatically with additional registration macros and type lists. This extends automated discovery to data-driven testing.
-
----
-
-## Global Setup and Teardown
-
-GoogleTest supports global environments via the `Environment` class. These are useful for one-time setup or cleanup necessary across all tests, for example, database connections or configuring shared test state.
-
-### Defining and Adding an Environment
-
-```cpp
-class MyEnvironment : public ::testing::Environment {
- public:
-  void SetUp() override {
-    // One-time initialization code
-  }
-
-  void TearDown() override {
-    // Cleanup code
-  }
-};
+#include <gtest/gtest.h>
 
 int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  ::testing::AddGlobalTestEnvironment(new MyEnvironment);
-  return RUN_ALL_TESTS();
+  testing::InitGoogleTest(&argc, argv);  // Setup GoogleTest
+  return RUN_ALL_TESTS();                // Trigger test execution
 }
 ```
 
-`SetUp()` is called before tests begin, and `TearDown()` after all tests complete, maintaining context integrity around the entire test program.
+<Note>
+You should always check the return code of `RUN_ALL_TESTS()` as it indicates success or failure of your test suite.
+</Note>
 
----
+## Test Execution Flow
 
-## Event Listener Integration
+Once the test program starts execution, GoogleTest runs each test case in the order determined by the registry, handling setup and teardown for each.
 
-GoogleTest provides an event listener interface that lets your code hook into the test lifecycle events such as start/end of tests, suites, and the entire program. This enables advanced reporting, custom output formats, or resource leak detection.
+### Running a Single Test
 
-### Example: Custom Minimalistic Event Listener
+For each test case:
 
-```cpp
-class MyListener : public ::testing::EmptyTestEventListener {
- public:
-  void OnTestStart(const ::testing::TestInfo& test_info) override {
-    std::cout << "Starting test: " << test_info.test_suite_name()
-              << "." << test_info.name() << std::endl;
-  }
-  void OnTestEnd(const ::testing::TestInfo& test_info) override {
-    std::cout << "Finished test: " << test_info.test_suite_name()
-              << "." << test_info.name() << std::endl;
-  }
-};
+1. **Create Test Fixture Object**
+   - GoogleTest instantiates the fixture class for the test (or a default if none).
 
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  testing::UnitTest::GetInstance()->listeners().Append(new MyListener);
-  return RUN_ALL_TESTS();
-}
+2. **Call Setup**
+   - Runs `SetUp()` method on the fixture.
+   - This prepares any shared state or resources needed for the test.
+
+3. **Execute Test**
+   - Runs the test body defined by you within `TEST_F` or `TEST`.
+
+4. **Call Teardown**
+   - Runs `TearDown()` on the fixture to clean up.
+
+5. **Destroy Fixture Object**
+
+This lifecycle isolates each test case to ensure no side-effects propagate across test boundaries.
+
+<Warning>
+If initialization or teardown throws an error or crashes, the current test is aborted but the framework continues with other tests.
+</Warning>
+
+### Parallelism and Ordering
+
+- By default, tests run sequentially. Some build systems can configure parallel execution but GoogleTest does not manage thread safety internally.
+- Respect test independence to avoid flaky results.
+
+## Setup and Teardown Mechanics
+
+### Test Fixtures
+
+- Fixtures are classes derived from `::testing::Test`.
+- You can override `SetUp()` and `TearDown()` to initialize and clean up state shared across tests in a suite.
+- Each test case gets a fresh fixture instance, ensuring isolation.
+
+### Constructor and Destructor
+
+- GoogleTest constructs and destructs the fixture object around each test.
+- Use constructors if setup does not require failure handling; otherwise prefer `SetUp()` and `TearDown()`.
+
+<Check>
+Best practice is to keep `SetUp()` and `TearDown()` lightweight to maintain fast test execution.
+</Check>
+
+## Test Suites and Test Cases
+
+### Structure
+
+- A **test suite** groups multiple related individual tests.
+- Each **test case** is a discrete, runnable unit within a suite.
+
+This hierarchical organization makes it easier to understand and run specific subsets.
+
+### Registration
+
+- Both test suites and test cases are registered internally during static initialization.
+- Users interact primarily with individual or grouped tests through command-line flags or test filters.
+
+### Filtering Tests
+
+- Use `--gtest_filter=` to limit which tests run by suite or test name.
+- This enables faster feedback loops when working on specific areas of code.
+
+### Example
+
+```shell
+./my_test_binary --gtest_filter=MyTestSuite.MyTestCase
 ```
 
-Listeners receive events in strict order, corresponding exactly to the lifecycle phases.
+## Reporting and Result Output
+
+### Summary of Results
+
+After all tests run, GoogleTest prints a summary including:
+
+- Passed test count
+- Failed test count
+- Any tests skipped or disabled
+
+### Failure Messages
+
+- Detailed messages are printed for failed tests.
+- Includes file and line where the failure occurred, the expression that failed, and any custom messages.
+
+### Output Formats
+
+- Human-readable
+- XML format for integration with CI systems (`--gtest_output=xml:path/to/file.xml`)
+
+### Options for Verbosity
+
+- Customize output with flags for more or less detail.
+
+## Typical User Flow
+
+<Steps>
+<Step title="Write and Compile Tests">
+Define your tests with `TEST()` and `TEST_F()`, build your test binary linking GoogleTest.
+</Step>
+<Step title="Run Tests via CLI">
+Run your test binary to perform test discovery and execution automatically.
+</Step>
+<Step title="Interpret Results">
+Read detailed output to identify failures or errors and debug accordingly.
+</Step>
+<Step title="Rerun with Filters">
+Narrow the test set by using filters to work iteratively on fixes.
+</Step>
+</Steps>
+
+## Best Practices
+
+- **Ensure isolation:** Design tests so each can run independently without side effects.
+- **Use fixtures wisely:** Shared setup/teardown reduces boilerplate.
+- **Leverage test filtering:** Keep turnaround time short by selectively running tests.
+- **Check return codes:** Always use the return code of `RUN_ALL_TESTS()`.
+- **Use provided main():** Whenever possible, link with `gtest_main` or `gmock_main` to avoid boilerplate.
+
+## Troubleshooting Tips
+
+- **Tests not running?**
+  - Make sure tests are linked into the executable.
+  - Verify macros `TEST` or `TEST_F` are used correctly.
+- **Setup or teardown not called?**
+  - Check proper overrides of `SetUp()` and `TearDown()`, and spelling.
+- **Tests failing unexpectedly?**
+  - Consider setup side-effects or shared state not properly reset.
+- **Filtering not working?**
+  - Double-check filter syntax and test names (case-sensitive).
+
+## Related Concepts
+
+- Integration with Build Systems: [Guides / Integrating with Build Systems](https://github.com/google/googletest/tree/main/docs/guides/real-world-guidance/project-integration.md)
+- Test Assertions and Matchers: [Concepts / Assertions & Matchers](https://github.com/google/googletest/tree/main/docs/concepts/core-architecture/assertions-matchers.md)
+- Writing Your First Test: [Getting Started / Writing Your First Test](https://github.com/google/googletest/tree/main/docs/guides/getting-started/writing-your-first-test.md)
 
 ---
 
-## Diagram: Test Discovery and Execution Workflow
+## Simplified Lifecycle Diagram
 
 ```mermaid
 flowchart TD
-  A[Start: Test Binary Loaded] --> B[Test Registration via Macros]
-  B --> C[RUN_ALL_TESTS() Called]
-  C --> D[Global Environments Setup]
-  D --> E[For Each Test Suite]
-  E --> F[Call SetUpTestSuite()]
-  F --> G[For Each Test in Suite]
-  G --> H[Create Test Fixture Instance]
-  H --> I[Call SetUp() on Fixture]
-  I --> J[Run TestBody()]
-  J --> K[Call TearDown()]
-  K --> L[Destroy Fixture Instance]
-  L --> M{More Tests?}
-  M -- Yes --> G
-  M -- No --> N[Call TearDownTestSuite()]
-  N --> O{More Suites?}
-  O -- Yes --> E
-  O -- No --> P[Global Environments Tear Down]
-  P --> Q[Report Results]
-  Q --> R[Return from RUN_ALL_TESTS()]
+  Start([Test Program Start]) --> Init["InitGoogleTest() called"]
+  Init --> Discover["Discover Registered Tests"]
+  Discover -->|For each Test Suite| SuiteLoop["Test Suite Loop"]
+  subgraph SuiteLoop
+    direction TB
+    SuiteSetup["Create Fixture per Test"]
+    SuiteSetup --> Setup["Call SetUp()"]
+    Setup --> RunTest["Run Test Case"]
+    RunTest --> TearDown["Call TearDown()"]
+    TearDown --> DestroyFixture["Destroy Fixture"]
+    DestroyFixture --> SuiteNext["More Tests in Suite?"]
+    SuiteNext -->|Yes| SuiteSetup
+    SuiteNext -->|No| NextSuite["More Test Suites?"]
+  end
+  NextSuite -->|Yes| SuiteLoop
+  NextSuite -->|No| OutputResults["Output Test Summary and Results"]
+  OutputResults --> End([Program Exit])
 
-  classDef phase fill:#f9f,stroke:#333,stroke-width:1px;
-  D,E,F,N,O,P,Q,R phase
+  classDef startend fill:#28a745,color:#fff,stroke:#19692c,stroke-width:2px;
+  class Start,End startend;
+
+  classDef process fill:#007bff,color:#fff,stroke:#004085,stroke-width:1.5px;
+  class Init,Discover,SuiteSetup,Setup,RunTest,TearDown,DestroyFixture,OutputResults process;
+
+  classDef decision fill:#ffc107,color:#333,stroke:#ba7811,stroke-width:2px;
+  class SuiteNext,NextSuite decision;
 ```
 
 ---
 
-## Best Practices and Tips
+## Summary
 
-- **Always call `InitGoogleTest()` before `RUN_ALL_TESTS()`.** This sets up internal state and parses flags.
-- **Never ignore the return value of `RUN_ALL_TESTS()`**; it indicates test success or failure.
-- **Keep test suites independent.** Rely on `SetUpTestSuite()` and `TearDownTestSuite()` to share resources safely.
-- **Use event listeners for customized reporting or tooling integration.**
-- **Leverage test filters, sharding, and repetition flags** to target and speed up testing.
-- **Remember each test runs on a fresh fixture instance;** avoid cross-test contamination.
+GoogleTest's **test discovery and execution lifecycle** transparently manages your tests from registration through to result reporting. By defining tests with macros like `TEST` and `TEST_F`, your tests are automatically registered and invoked. Initialization with `InitGoogleTest` followed by execution via `RUN_ALL_TESTS()` drives the lifecycle, handling fixtures, setup, teardown, test invocation, and output with fine control.
+
+Mastering this flow enables you to write efficient, isolated tests and harness GoogleTest's powerful features effectively.
 
 ---
 
-## Troubleshooting
+For comprehensive instructions on writing tests and controlling execution, consult these guides:
 
-- If tests are not discovered:
-  - Ensure you use the proper `TEST()`, `TEST_F()`, or `TEST_P()` macros.
-  - Confirm that `InitGoogleTest()` is called before `RUN_ALL_TESTS()`.
-- For tests skipped unexpectedly:
-  - Check filters with `--gtest_filter`.
-  - Verify disabled tests and use `--gtest_also_run_disabled_tests` if necessary.
-- When test fixtures fail to set up:
-  - Review fixture constructors, `SetUp()`, and suite setup methods.
-  - Avoid throwing exceptions; if needed, ensure exception catching is enabled.
+- [Writing Your First Test](https://github.com/google/googletest/tree/main/docs/guides/getting-started/writing-your-first-test.md)
+- [Organizing and Running Test Suites](https://github.com/google/googletest/tree/main/docs/guides/getting-started/organizing-test-suites.md)
+- [Assertions & Matchers](https://github.com/google/googletest/tree/main/docs/concepts/core-architecture/assertions-matchers.md)
+- [Initialization and Flag Reference](https://github.com/google/googletest/tree/main/docs/api-reference/platform-flags/flags-and-init.md)
+
+For embedding GoogleMock alongside GoogleTest in your mocks, explore the [GoogleMock documentation](https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md).
+
 
 ---
 
-GoogleTest automates the testing process end-to-end. Understanding its test discovery and lifecycle empowers you to write maintainable, robust tests that integrate smoothly with your development flow.
+**Tip:** Use test filtering (`--gtest_filter`) and parameterized tests to manage complex test architectures efficiently.
 
 ---
 
-## Additional Resources
-
-- [Getting Started with GoogleTest](https://example.com/guides/core-workflows/getting-started)
-- [Writing and Running Unit Tests](https://example.com/guides/core-workflows/writing-unit-tests)
-- [Core Concepts and Terminology](https://example.com/overview/core-concepts/core-concepts-terminology)
-- [Event Listeners](https://example.com/guides/core-workflows/getting-started#extending-with-listeners)
-- [GoogleTest Primer](https://example.com/docs/primer.md)
-- [Testing Reference](https://example.com/docs/reference/testing.md)
 
