--- a/getting-started/first-test-run/create-first-test.mdx
+++ b/getting-started/first-test-run/create-first-test.mdx
@@ -1,201 +1,173 @@
 ---
-title: "Write and Build Your First Test"
-description: "Guided example showing how to author a basic test using GoogleTest, including test macro usage and compiling your test binary. Focus is on clarity and minimizing barriers for new users."
+title: "Writing Your First Test"
+description: "Learn how to quickly draft a simple test case, using provided templates and recommended test structure. Discover essential GoogleTest macros and best practices for writing readable, maintainable tests."
 ---
 
-# Write and Build Your First Test
+# Writing Your First Test
 
-Welcome to the first step of mastering GoogleTest: writing and building your initial test. This guide walks you through the essential process of authoring a basic test using GoogleTest’s macros and compiling your test binary. By following these concrete steps, you’ll quickly realize the power and simplicity GoogleTest brings to C++ testing.
-
----
-
-## 1. Prerequisites & Setup
-
-Before writing your first test, ensure your environment meets the following requirements:
-
-- **C++17 Support**: GoogleTest requires a C++17-capable compiler.
-- **GoogleTest Source**: Clone or download GoogleTest (recommended version: v1.17.0 or later).
-- **Build System**: CMake is the preferred and easiest build system to configure and build GoogleTest and your tests.
-- **Project Configuration**: Your project must include the GoogleTest headers and link against GoogleTest libraries (`gtest` and optionally `gtest_main`).
-
-### Setting Up Your Development Environment
-
-If you haven’t already set up GoogleTest, follow the instructions in the [Installation Methods guide](https://github.com/google/googletest/blob/main/README.md#generic-build-instructions) to clone and build GoogleTest with CMake. 
-
-> Tip: Use `gtest_main` library to avoid writing your own `main()` function unless you need custom test initialization.
+Learn how to quickly draft a simple test case, using provided templates and recommended test structure. Discover essential GoogleTest macros and best practices for writing readable, maintainable tests.
 
 ---
 
-## 2. Writing Your First Test
+## 1. Understanding the Basics of a GoogleTest
 
-GoogleTest lets you write tests using the `TEST()` macro, which defines a test function within a named test suite.
+GoogleTest is designed to help you write clear and concise C++ tests efficiently. Your journey begins by understanding GoogleTest's core constructs:
 
-### How to Write a Simple Test
+- **Test Suites**: Logical grouping of related tests.
+- **Tests**: Individual test cases validating specific behavior.
+- **Assertions**: Statements that check conditions and determine test outcomes.
 
-1. **Include the GoogleTest Header:**
+Each test belongs to a test suite. Tests within the same suite share a meaningful context.
 
-```cpp
-#include <gtest/gtest.h>
-```
 
-2. **Define a Test Suite and Test Name:**
+## 2. Creating a Simple Test
 
-Use the `TEST(TestSuiteName, TestName)` macro. Both names are identifiers without underscores.
+Follow this step-by-step guide to write your first test using the `TEST()` macro:
+
+<Steps>
+<Step title="Define the Test Suite and Test">
+Use the `TEST(TestSuiteName, TestName)` macro.
+
+- The *TestSuiteName* is a descriptive name grouping your tests.
+- The *TestName* describes the particular scenario being tested.
+
+Example:
 
 ```cpp
 TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
+  // Your test code here
 }
 ```
+</Step>
+<Step title="Use Assertions Within the Test">
+Within the test body, use assertions like `EXPECT_EQ`, `ASSERT_TRUE` to validate behavior.
 
-3. **Add Assertions:**
-
-Within the test body, make assertions to verify expected behavior. Use `EXPECT_*` for non-fatal failures (test continues) and `ASSERT_*` for fatal failures (aborts current test).
+Example verifying a `Factorial` function:
 
 ```cpp
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-}
+EXPECT_EQ(Factorial(0), 1);
 ```
+</Step>
+<Step title="Keep Tests Self-Contained and Clear">
+Write only the necessary logic and assertions related to the test case.
 
-### Practical Example
+Avoid dependencies between tests to ensure independence and repeatability.
+</Step>
+</Steps>
 
-Here’s a complete example testing a simple factorial function:
+
+## 3. Recommended Sample Test: Factorial Function
+
+Here is a minimal test suite that checks a simple factorial function:
 
 ```cpp
-// factorial.h
-int Factorial(int n);
+// Prototype of the function to test
+int Factorial(int n);  
 
-// factorial_test.cc
-#include <gtest/gtest.h>
-#include "factorial.h"
-
+// Test factorial of 0
 TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
 
+// Test factorial of positive numbers
 TEST(FactorialTest, HandlesPositiveInput) {
   EXPECT_EQ(Factorial(1), 1);
   EXPECT_EQ(Factorial(2), 2);
   EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
----
+### What This Achieves
 
-## 3. Building Your Test Binary
+- **Organized tests under `FactorialTest` suite**: logically grouping tests of the factorial function.
+- **Clear individual test names**: `HandlesZeroInput` and `HandlesPositiveInput` describe test intent.
+- **Readable assertions**: `EXPECT_EQ` compares actual and expected values with concise failure output on mismatch.
 
-Now you need to compile your test code linking against GoogleTest libraries.
 
-### Using CMake
+## 4. Naming Conventions
 
-1. Create a `CMakeLists.txt` file in your test directory:
+Use these best practices to name your test suites and tests:
 
-```cmake
-cmake_minimum_required(VERSION 3.10)
-project(MyTests)
+- Use **CamelCase** or **PascalCase** for names.
+- Avoid underscores to stay consistent and avoid compilation issues.
+- Start with the feature or component name as the test suite.
+- Use descriptive, specific test names that explain what the test verifies.
 
-find_package(GTest REQUIRED)
+Example: `TEST(StringUtilsTest, ConvertsToUpperCase)`
 
-add_executable(my_test factorial_test.cc factorial.cc)
 
-target_link_libraries(my_test GTest::gtest_main GTest::gtest pthread)
+## 5. Handling Assertions
 
-include(GoogleTest)
-gtest_discover_tests(my_test)
+GoogleTest provides two main types of assertions:
+
+- **`ASSERT_*`**
+  - Generate fatal failure.
+  - Abort the current function immediately.
+  - Use when continuing the test after failure is meaningless or causes crashes.
+
+- **`EXPECT_*`**
+  - Generate nonfatal failure.
+  - Continue executing the rest of the test.
+  - Preferred when you want to detect multiple errors in a single run.
+
+### Adding Custom Failure Messages
+
+Stream custom messages after assertions for clearer diagnostics:
+
+```cpp
+ASSERT_EQ(x.size(), y.size()) << "Vectors have different lengths";
 ```
 
-2. Configure and Build:
 
-```bash
-mkdir build && cd build
-cmake ..
-make
+## 6. Running Your Tests
+
+Once your tests are defined, invoke them in your `main()` function as follows:
+
+```cpp
+#include <gtest/gtest.h>
+
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
-3. Run your tests:
+This ensures that all tests are executed and the program exits with appropriate status.
 
-```bash
-./my_test
-```
+> Tip: Typically, you shouldn't need to write `main()` yourself if you link against `gtest_main`.
 
-### Manually Compiling with g++ (Linux/macOS)
 
-```bash
-g++ -std=c++17 -isystem /path/to/googletest/include -pthread factorial_test.cc factorial.cc /path/to/libgtest.a /path/to/libgtest_main.a -o my_test
-./my_test
-```
+## 7. Tips for Success
 
-> Note: Adjust `/path/to/` to the real GoogleTest source and library paths on your machine.
+- **Write independent tests**: Avoid dependencies among tests to simplify diagnosis.
+- **Keep tests small and focused**: Test one behavior or condition per test.
+- **Use `EXPECT_*` assertions when possible**: To get comprehensive test failure information.
+- **Group related tests logically**: Use descriptive test suite names.
+- **Follow naming conventions**: Consistency helps readability and maintenance.
 
----
 
-## 4. Understanding What's Happening
+## 8. Troubleshooting Common Issues
 
-- When you compile and run, GoogleTest automatically discovers your tests defined by `TEST()` macros.
-- Each test is executed independently in a fresh fixture.
-- Assertions inside the tests verify your code and output detailed information on failures.
-- The test runner shows a summary of passed and failed tests.
+- **Compilation Errors Due to Naming or Macro Use**: 
+  - Verify that test suite and test names are valid C++ identifiers without underscores.
+  - Check you use the correct macro (`TEST()` for simple tests).
 
----
+- **Tests Not Being Found or Run**:
+  - Ensure your test binary links against GoogleTest properly.
+  - Call `testing::InitGoogleTest` before `RUN_ALL_TESTS()` in `main()`.
 
-## 5. Common Pitfalls and Tips
+- **Assertions Abort Test Prematurely**:
+  - Confirm if `ASSERT_*` is needed; try `EXPECT_*` if you want to continue after failure.
 
-- **Test and Suite Naming:** Avoid underscores (`_`) in test suite and test names because GoogleTest filters and output conventions recommend alphanumeric names only.
 
-- **Use `EXPECT_` vs `ASSERT_`:** Use `EXPECT_` when you want the test to continue after a failure; use `ASSERT_` when failure means the test cannot proceed safely.
+## 9. Next Steps
 
-- **One Test per `TEST()`:** Each `TEST()` should be focused on a single behavior or verification.
+- Explore the [GoogleTest Primer](primer.md) to deepen your understanding of writing tests and test fixtures.
+- Try the [Googletest Samples](samples.md) to see more complete examples.
+- When ready, learn how to [Use Assertions Effectively](guides/getting-started/using-assertions.md) for robust test conditions.
 
-- **Link Correct Libraries:** Ensure linking with `gtest_main` (for default `main`) or provide your own `main()`.
-
-- **Call `InitGoogleTest()`:** If you provide your own `main()`, call `testing::InitGoogleTest(&argc, argv)` before `RUN_ALL_TESTS()`.
-
-- **Check the Return Code:** The return from `RUN_ALL_TESTS()` indicates overall success (0) or failure (non-zero).
 
 ---
 
-## 6. Troubleshooting Compilation and Runtime Issues
-
-<Accordion title="Common Build Problems">
-**Problem:** Missing GoogleTest headers or libraries.
-
-**Solution:** Verify include and link paths in your build system configurations.
-
-**Problem:** Linker errors about undefined references to GoogleTest symbols.
-
-**Solution:** Link against both `gtest` and `gtest_main` libraries; include `-pthread` on Linux.
-
-**Problem:** Tests don’t run, or output is unclear.
-
-**Solution:** Confirm you call `testing::InitGoogleTest()` and `RUN_ALL_TESTS()` in your `main()` if not linking with `gtest_main`.
-</Accordion>
-
-<Accordion title="Runtime Failures in Tests">
-Common assertion errors in tests indicate either incorrect expected values or code under test producing incorrect results. Use detailed assertion messages and `SCOPED_TRACE()` to better locate failures.
-</Accordion>
-
----
-
-## 7. Next Steps
-
-- Explore writing *Test Fixtures* for shared test setup using `TEST_F()`.
-- Learn about *value-parameterized tests* to test different inputs with `TEST_P()` and `INSTANTIATE_TEST_SUITE_P()`.
-- Understand advanced assertions and matchers to write richer tests. See the [Assertions Reference](reference/assertions.md).
-- Consult the [Getting Started Guide](getting-started/first-test-run/run-tests) to learn how to execute and filter tests.
-
----
-
-## References and Further Reading
-
-- [GoogleTest Primer](docs/primer.md) — Basics of GoogleTest
-- [Testing Reference](docs/reference/testing.md) — Detailed explanations of `TEST`, `TEST_F`, `TEST_P` macros
-- [Installation Methods](getting-started/prerequisites-installation/installation-methods) — How to build and install GoogleTest
-- [Advanced Guide](docs/advanced.md) — For deeper test writing and features
-- [Core Concepts](overview/concepts-architecture-terminology/core-concepts-terminology) — Understand GoogleTest terminology
-
----
-
-For more comprehensive workflows and expert tips, browse the complete Getting Started collection and the Guides section in the documentation portal.
+_For detailed configuration and build instructions, refer to [Quickstart: Building with CMake](getting-started/prereq-install/quickstart-cmake.md)._
