--- a/guides/getting-started/writing-your-first-test.mdx
+++ b/guides/getting-started/writing-your-first-test.mdx
@@ -1,250 +1,204 @@
 ---
 title: "Writing Your First Test"
-description: "A hands-on guide to creating your first test case with GoogleTest, explaining the structure of test suites, simple assertions, and how to run your tests."
+description: "Step through creating your first simple unit test using GoogleTest. This guide walks you through initial setup, fundamental assertions, and essential runner commands, helping you establish solid testing habits from the outset."
 ---
 
 # Writing Your First Test
 
-Welcome to your hands-on guide for creating your first test case using GoogleTest. This page will lead you through understanding the structure of test suites, how to write simple assertions, and how to execute your newly created tests effectively.
+Step through creating your first simple unit test using GoogleTest. This guide walks you through initial setup, fundamental assertions, and essential runner commands, helping you establish solid testing habits from the outset.
 
 ---
 
-## 1. What This Guide Will Help You Achieve
+## Workflow Overview
 
-You will learn how to:
-
-- Define your first test case using the GoogleTest framework.
-- Understand the organization of tests into suites.
-- Use basic assertions to verify expected behavior.
-- Run your tests and interpret the results.
+### What You Will Achieve
+By following this guide, you'll write your first unit test using GoogleTest. You'll learn how to:
+- Set up a basic test case and test suite
+- Write simple assertions to validate code behavior
+- Build and run your tests using the GoogleTest framework
+- Understand the test result outputs
 
 ### Prerequisites
-
-Before you start, make sure:
-
-- GoogleTest is properly installed and integrated into your build environment.
-- Your development environment supports at least C++17 (see [Prerequisites & Requirements](../getting_started/intro_and_setup/prerequisites_requirements)).
-- You have a sample project or source file prepared to add tests.
+Make sure you have:
+- GoogleTest properly installed and configured in your project (see Installation Guide)
+- A basic C++ development environment set up (compiler, build system)
+- Source code to test (a simple function or class to verify)
 
 ### Expected Outcome
+After completing this guide, you will have a working test executable that:
+- Includes at least one test suite with one or more test cases
+- Runs tests and reports success or failure clearly
+- Demonstrates fundamental GoogleTest macros and assertions
 
-By the end of this guide, you will have a basic test written, compiled, and running successfully within the GoogleTest framework.
-
-### Time Estimate
-
-15–30 minutes depending on your familiarity with C++ and test frameworks.
+### Estimated Time
+About 10-15 minutes.
 
 ### Difficulty Level
-
-Beginner
-
----
-
-## 2. Understanding the Basic Structure of a GoogleTest Test
-
-In GoogleTest, tests are organized into _test suites_ (previously called _test cases_). Each test suite contains multiple _test cases_, written with the `TEST` macro.
-
-### Anatomy of a Simple Test
-
-```cpp
-#include <gtest/gtest.h>
-
-// Define a test case named "MyFirstTest" inside the test suite "SampleTest".
-TEST(SampleTest, MyFirstTest) {
-  int expected = 7;
-  int actual = 3 + 4;
-
-  // Assert that expected equals actual
-  EXPECT_EQ(expected, actual);
-}
-```
-
-**Key points:**
-
-- `TEST(TestSuiteName, TestName)`: Macro that defines a test.
-- Inside the test body, assertions check conditions. Here, `EXPECT_EQ` verifies that two values are equal.
-- Assertions help verify the correctness and indicate success or failure.
-
-### Common Assertions
-
-- `EXPECT_EQ(val1, val2)`: Expect val1 equals val2.
-- `EXPECT_TRUE(condition)`: Expect condition is true.
-- `EXPECT_FALSE(condition)`: Expect condition is false.
-- `ASSERT_EQ(val1, val2)`: Same as `EXPECT_EQ` but stops the test immediately on failure.
-
-Use `EXPECT_*` if you want the test to continue after a failure; use `ASSERT_*` if not.
+Beginner-friendly.
 
 ---
 
-## 3. Step-by-Step: Writing and Running Your First Test
+## Step-by-Step Instructions
 
-<Steps>
-<Step title="Step 1: Create a Test File">
-Create a new C++ source file (e.g., `my_first_test.cc`) in your project’s test directory.
-</Step>
-<Step title="Step 2: Include GoogleTest Header">
-Add the include:
+### Step 1: Include GoogleTest Headers
+Ensure your test source file includes the GoogleTest header to access the testing macros:
 
 ```cpp
 #include <gtest/gtest.h>
 ```
 
-This imports the testing macros and functions you need.
-</Step>
-<Step title="Step 3: Define a Simple Test">
-Define a test in this file using the `TEST` macro. For example:
+### Step 2: Write a Simple Test Using TEST Macro
+The `TEST` macro defines a basic test function. It takes two arguments:
+- The test suite name (grouping tests)
+- The test name
+
+Here's an example that tests a simple `Factorial` function:
 
 ```cpp
-TEST(SampleTest, AddsNumbersCorrectly) {
-  EXPECT_EQ(5 + 3, 8);
+// Example factorial function to test
+int Factorial(int n) {
+  return (n <= 1) ? 1 : n * Factorial(n - 1);
+}
+
+// Define a test in the suite 'FactorialTest' with the name 'HandlesZeroInput'
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+// Another test case
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
-This test will pass if 5 + 3 equals 8.
-</Step>
-<Step title="Step 4: Configure Build to Include Your Test">
-Make sure your build system includes your test file and links against GoogleTest libraries.
+- Use `EXPECT_EQ` to assert expected equality: `EXPECT_EQ(actual, expected)`.
+- The test body can contain standard C++ code.
 
-If using CMake, your `CMakeLists.txt` should include:
+### Step 3: Build Your Test Executable
+Compile your test source file along with GoogleTest into an executable.
+- If using CMake, link with the `gtest` or `gtest_main` libraries.
+
+Example CMake snippet:
 
 ```cmake
-add_executable(my_first_test my_first_test.cc)
-target_link_libraries(my_first_test gtest gtest_main)
+add_executable(my_test test_file.cc)
+target_link_libraries(my_test gtest_main)
 ```
 
-Then build your test executable.
-</Step>
-<Step title="Step 5: Run the Test Executable">
-Run your test binary from the command line:
+### Step 4: Run the Tests
+Run your built test binary. GoogleTest will:
+- Discover all defined tests
+- Run each test and report results
 
-```bash
-./my_first_test
-```
-
-GoogleTest will discover your test, run it, and print the results.
-
-Expected output snippet:
+Sample console output:
 
 ```text
-[==========] Running 1 test from 1 test suite.
+[==========] Running 2 tests from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 1 test from SampleTest
-[ RUN      ] SampleTest.AddsNumbersCorrectly
-[       OK ] SampleTest.AddsNumbersCorrectly (0 ms)
-[----------] 1 test from SampleTest (0 ms total)
+[----------] 2 tests from FactorialTest
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
 
 [----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
 ```
-</Step>
-</Steps>
 
-### Verification
-
-You have successfully written, compiled, and run your first test if:
-
-- The test binary runs without errors.
-- The test case output includes `[  PASSED  ]`.
+### Step 5: Interpret Results
+- `PASSED` means your assertions succeeded.
+- Failures print the location and expected vs actual values.
 
 ---
 
-## 4. Practical Tips and Best Practices
+## Best Practices
 
-- **Name tests descriptively.** Use clear, concise names for test suites and tests reflecting what they verify.
-- **Keep tests small and focused.** Each test should verify one behavior or scenario.
-- **Use test fixtures when you have setup/teardown code.** See the [Test Fixtures guide](../guides/getting-started/exploring-mock-objects) to extend your tests.
-- **Use assertions that best match your intent** (e.g., `EXPECT_TRUE` vs `ASSERT_TRUE`).
-- **Avoid over-specifying arguments or conditions** to prevent brittle tests.
-
-<Warning>
-Do not call `EXPECT_CALL()` or set expectations after invoking the methods on a mock object. Expectations must be set before exercising the code.
-</Warning>
+- Name test suites and tests clearly reflecting their intent.
+- Use `EXPECT_*` assertions to allow multiple checks per test, `ASSERT_*` for fatal conditions.
+- Keep tests independent and isolate failures.
+- Write tests before or along with your code for better coverage.
 
 ---
 
-## 5. Troubleshooting Common Issues
+## Common Pitfalls
 
-<AccordionGroup title="Common Problems Running Your First Test">
-<Accordion title="Test executable does not run or is not found">
-Make sure you:
-
-- Built your test target.
-- Have the test binary in the path you are calling it.
-- Linked against GoogleTest libraries.
-
-Check build system configuration if issues persist.
-</Accordion>
-<Accordion title="Test runs but no tests are discovered">
-Make sure you:
-
-- Use the GoogleTest macros properly.
-- Include `<gtest/gtest.h>`.
-- Use the `TEST()` macro to define tests.
-
-Also, verify your test file is part of the build.
-</Accordion>
-<Accordion title="Assertion failures or unexpected test failures">
-Review error messages; if the logic in your test is incorrect, assertions will fail.
-
-Remember:
-
-- `EXPECT_` assertions continue the test on failure.
-- `ASSERT_` assertions abort the test on failure.
-
-Running with `--gtest_verbose=info` can provide more details.
-</Accordion>
-</AccordionGroup>
+- Forgetting to link with GoogleTest libraries.
+- Using `TEST()` instead of `TEST_F()` if you intend to use fixtures.
+- Omitting `testing::InitGoogleTest(&argc, argv);` and `RUN_ALL_TESTS()` in `main()` when you write one.
+- Not returning the value of `RUN_ALL_TESTS()` in your `main()`.
 
 ---
 
-## 6. What’s Next?
+## Troubleshooting
 
-After mastering your first basic test:
+### Test Fails To Compile
+- Check proper inclusion of `<gtest/gtest.h>`.
+- Verify library paths and link flags are set correctly.
 
-- Explore how to **write parameterized and typed tests** to reduce duplication. ([Parameterized and Typed Tests](../guides/real-world-workflows/parameterized-and-typed-tests))
-- Start using **test fixtures** to manage shared setup and teardown.
-- Learn about **mocking dependencies** with GoogleMock to enable interaction-based testing.
-- Consult the [Basic Configuration](../getting_started/initial_usage_and_validation/configuration) guide to optimize your test environment.
+### Tests Run But No Tests Found
+- Confirm that `TEST()` macros are expanded and not hidden behind macros.
+- Ensure that the code containing tests is compiled and linked.
 
----
-
-### Additional Resources
-
-- [What is GoogleTest?](../overview/product-introduction/what-is-googletest)
-- [Why Use GoogleTest?](../overview/product-introduction/value-proposition)
-- [GoogleTest Architecture Overview](../overview/architecture-core-concepts/architecture-diagram)
-- [gMock for Dummies](../docs/gmock_for_dummies.md) – if you want to explore mocking concepts
+### Tests Fail But You Expect Them To Pass
+- Review assertion failure details carefully.
+- Use verbose output with `--gtest_filter` to focus on single tests.
 
 ---
 
-## Summary
-
-With these steps, you have laid the foundation for effective unit testing in C++. Writing your first test unlocks the full power of GoogleTest’s rich assertion set and seamless integration into your build and development workflow.
-
-Keep testing, and remember: tests help you ship better, faster software.
-
----
-
-##### Sample Full Minimal Test Code
+## Example Full Test Program
 
 ```cpp
 #include <gtest/gtest.h>
 
-TEST(SimpleMathTests, Addition) {
-  EXPECT_EQ(2 + 2, 4);
+// Simple function under test
+int Factorial(int n) {
+  return (n == 0) ? 1 : n * Factorial(n - 1);
+}
+
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 
 int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
+  testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-This code builds and runs a minimal test executable.
+Save this in a file (e.g. `factorial_test.cc`), then build and run.
 
 ---
 
-<Check>
-Ensure to run your tests with the flag `--gtest_color=yes` to get colored output in supported terminals, enhancing readability.
-</Check>
+## Next Steps & Related Content
+
+- Explore **Using Assertions Effectively** to write more comprehensive tests.
+- Learn about **Test Fixtures** (`TEST_F()`) for testing with shared objects.
+- Dive into **Writing and Running Tests** for more detailed examples.
+- Check out the [GoogleTest Primer](primer.md) for foundational concepts.
+- Once comfortable, explore Mocking with GoogleMock for testing interactions.
+
+---
+
+<Tip>
+Start simple and build confidence. Writing your first test is a foundation for reliable, maintainable C++ software. GoogleTest's framework is designed to make this process smooth and approachable.
+</Tip>
+
+<Note>
+If you encounter issues with linking or running tests, refer to the Installation Guide and Prerequisites documentation.
+</Note>
+
+<Warning>
+Always ensure you call `RUN_ALL_TESTS()` and return its result in your main() to correctly report test results.
+</Warning>
